assets/style.css
.nav-pills .nav-link,
nav a {
  color: #000;
}
.about-me__introduction,
.quote,
.quote__text {
  font-style: italic;
  font-family: Spectral;
}
.quote,
.quote__author,
.quote__text {
  font-family: Spectral;
}
.service,
header {
  background-color: #fff;
  display: flex;
}
#about,
footer {
  position: relative;
  padding-inline: 100px;
  padding-block: 100px;
}
.picture.left::before,
.picture.right::before {
  content: " ";
  width: 374px;
  height: 329px;
  bottom: 0;
  z-index: -1;
}
#about,
.mg-next,
.mg-prev,
.service,
footer .container,
form,
header,
nav ul {
  display: flex;
}
body {
  max-width: 1920px;
  margin: auto;
}
* {
  font-family: Inter;
  font-style: normal;
}
header {
  position: sticky;
  top: 0;
  z-index: 1000;
  justify-content: space-between;
  padding-inline: 100px;
  padding-block: 30px;
  align-items: center;
}
header .name {
  font-size: 26px;
}
nav ul {
  list-style-type: none;
  font-size: 14px;
  margin-bottom: 0;
}
nav li {
  padding-inline: 10px;
}
nav a {
  text-decoration: none;
}
.social-link img {
  width: 20px;
}
#about {
  background-color: #f6d2b8;
}
.picture.left::before {
  background-color: #e5975f;
  position: absolute;
  left: 0;
}
.picture {
  flex: 1;
  margin: 0 20px;
  z-index: 0;
}
.picture img {
  width: 100%;
}
#about-me,
.form-container {
  flex: 2;
}
.about-me__title {
  margin-top: 1em;
  margin-bottom: 60px;
  font-size: 30px;
}
.about-me__introduction {
  font-weight: 800;
  width: 60%;
}
#about-me p {
  width: 80%;
  font-size: 14px;
}
#gallery {
  min-height: 100vh;
}
.title {
  text-align: center;
  padding-block: 2em;
}
.gallery .nav {
  justify-content: center;
}
.nav-pills .nav-link.active,
.nav-pills .show > .nav-link {
  color: #fff;
  background-color: #beb45a;
  border-radius: 0;
}
.item-column {
  position: relative;
  margin-bottom: 0 !important;
  padding: 0;
}
#services,
.quote,
footer {
  margin: auto;
}
.item-column::after {
  content: "";
  display: block;
  padding-bottom: 100%;
}
.gallery-item {
  position: absolute;
  width: 100%;
  height: 100%;
  object-fit: cover;
  padding: 0.5em;
}
.mg-next,
.mg-prev {
  width: 30px;
  height: 30px;
  border-radius: 00%;
  justify-content: center;
  align-items: center;
  font-size: 24px;
}
form input,
form textarea {
  width: 100%;
  background-color: transparent;
  border: 1px solid;
  margin-bottom: 20px;
}
.quote {
  width: 70%;
  padding-block: 3em;
}
.quote__text {
  font-weight: 300;
}
.quote__author {
  font-weight: 800;
  font-size: 22px;
}
#services {
  background-color: #a8d5d8;
  position: relative;
}
#services .container::before {
  content: " ";
  background-color: #1c6474;
  position: absolute;
  width: 100%;
  height: 30%;
  bottom: 0;
  left: 0;
  z-index: 0;
}
#services .container {
  justify-content: space-between;
  display: flex;
  padding: 2em 0;
}
.service {
  max-width: 390px;
  width: 30%;
  height: 337px;
  padding: 1em;
  flex-direction: column;
  justify-content: space-between;
  z-index: 1;
}
footer {
  background-color: #d8d3a8;
}
.picture.right::before {
  background-color: #beb45a;
  position: absolute;
  right: 0;
}
form {
  flex-direction: column;
  width: 70%;
  align-items: flex-start;
}
form input {
  height: 2.5em;
}
form textarea {
  height: 5em;
  line-height: 2.5em;
  font-size: 1.2em;
}
input[type="submit"] {
  background-color: #beb45a;
  padding: 0.5em 1em;
}
@media all and (max-width: 1180px) {
  .picture {
    flex: 2;
  }
  #about,
  footer .container {
    align-items: center;
  }
  .about-me__title {
    margin-top: 0;
    margin-bottom: 1em;
  }
  #about-me h6,
  #about-me p {
    width: 100%;
  }
}
@media all and (max-width: 1000px) {
  .picture.left::before,
  .picture.right::before {
    height: 30%;
    position: absolute;
    z-index: -1;
    width: 100%;
  }
  #about,
  #services .container,
  footer .container {
    flex-direction: column;
  }
  .picture {
    width: 50%;
  }
  .picture.left::before {
    bottom: auto;
    top: 0;
    left: 0;
  }
  .about-me__title {
    text-align: center;
    margin-top: 1em;
  }
  .service {
    width: 100%;
    max-width: 100%;
    height: auto;
    margin: 2em 0;
  }
  .service__description {
    margin-bottom: 1em;
  }
  #services .container::before {
    width: 30%;
    height: 100%;
    bottom: 0;
    right: 0;
    left: auto;
    z-index: 0;
  }
  footer .picture.right {
    margin-top: 1em;
  }
  .picture.right::before {
    bottom: 0;
    right: 0;
  }
}
@media all and (max-width: 650px) {
  header {
    flex-direction: column;
    padding-inline: 0;
  }
  header .nav,
  header .nav ul {
    width: 100%;
    padding: 0;
  }
  header .nav li {
    flex: 1;
    padding-block: 1em;
    text-align: center;
  }
  .picture.left::before,
  .picture.right::before {
    height: 150px;
  }
  #services .container {
    align-items: center;
  }
  .service {
    max-width: 90%;
  }
  #about,
  footer {
    padding-inline: 2em;
    padding-block: 2em;
  }
  form {
    width: 100%;
  }
  .picture {
    width: 80%;
  }
}

